[package]
name = "ethers-pub-use"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.66"
eyre = "0.6.8"
futures-channel = "0.3.27"
once_cell = "1.17.1"
pin-project = "1.0.12"
serde = "1.0.155"
serde_json = "1.0.94"
thiserror = "1.0.39"
tracing = "0.1.37"
