[package]
name = "ethers-pub-use"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.66"
eyre = "0.6.8"
futures-channel = "0.3.27"
hex = "0.4.3"
once_cell = "1.17.1"
pin-project = "1.0.12"
reth-rlp = { git = "https://github.com/paradigmxyz/reth", version = "0.1.2", features = ["derive", "std"] }
serde = "1.0.155"
serde_json = "1.0.94"
serde_with = "2.3.1"
thiserror = "1.0.39"
tracing = "0.1.37"
