[package]
name = "ethers-rpc-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers-pub-use = { version = "0.1.0", path = "../../ethers-pub-use" }
ethers-types = { version = "0.1.0", path = "../../ethers-types", features = ["serde", "rlp"] }
reth-rlp = { git = "https://github.com/paradigmxyz/reth", version = "0.1.2", features = ["derive"] }
serde = "1.0.156"
serde_with = "2.3.1"
url = "2.3.1"
